--- a/client/package.json
+++ b/client/package.json
@@ -11,55 +11,54 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
-    "@coreui/coreui-pro": "^2.0.14",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
+    "@coreui/coreui-pro": "^2.1.16",
     "@coreui/icons": "^0.2.0",
-    "@coreui/react": "^2.0.7",
-    "axios": "^0.18.0",
+    "@coreui/react": "^2.5.4",
+    "axios": "^0.18.1",
     "axios-cancel": "^0.2.2",
-    "bootstrap": "^4.1.1",
-    "chart.js": "^2.7.2",
+    "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
     "codemirror": "5.39.0",
-    "core-js": "^2.5.7",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "flag-icon-css": "^3.0.0",
+    "core-js": "^2.6.11",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "flag-icon-css": "^3.4.5",
     "font-awesome": "^4.7.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
     "react-big-calendar": "0.19.2",
     "react-bootstrap-table": "4.3.1",
-    "react-chartjs-2": "^2.7.2",
+    "react-chartjs-2": "^2.9.0",
     "react-codemirror2": "^5.0.4",
     "react-dates": "17.0.0",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.12.0",
     "react-google-maps": "9.4.5",
     "react-grid-layout": "^0.16.6",
     "react-ladda": "6.0.0",
     "react-loadable": "^5.4.0",
     "react-quill": "1.3.0",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.2",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
     "react-select": "^1.2.1",
     "react-stockcharts": "^0.7.8",
-    "react-test-renderer": "^16.4.1",
+    "react-test-renderer": "^16.12.0",
     "react-text-mask-hoc": "^0.10.6",
-    "react-toastify": "^4.4.0",
-    "react-tradingview-widget": "^1.3.0",
-    "reactstrap": "^6.1.0",
-    "redux": "^4.0.0",
+    "react-toastify": "^4.5.2",
+    "react-tradingview-widget": "^1.3.2",
+    "reactstrap": "^6.5.0",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "simple-line-icons": "^2.4.1",
     "spinkit": "1.2.5"
   },
   "devDependencies": {
-    "babel-jest": "^23.0.1",
-    "mutationobserver-shim": "^0.3.2",
-    "node-sass-chokidar": "^1.3.0",
-    "npm-run-all": "^4.1.3",
-    "react-scripts": "^1.1.4"
+    "mutationobserver-shim": "^0.3.3",
+    "node-sass-chokidar": "^1.4.0",
+    "npm-run-all": "^4.1.5",
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss",
@@ -71,5 +70,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
